--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -133,6 +133,36 @@
                 android:layout_marginTop="10dp"
                 android:id="@+id/signupEmail" />
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/placeholder_location"
+                    android:ems="10"
+                    android:maxLength="64"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/txt_currentLocation"
+                    android:gravity="center_vertical"
+                    />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/ic_my_location_black_24dp"
+                    android:id="@+id/bt_getCurrentLcation"
+                    />
+
+            </RelativeLayout>
+
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
